<resources>
    <string name="app_name">Saturnalia Users</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favorites">Favoritos</string>
    <string name="notifications">Notificaciones</string>
    <string name="navigationDelete">navigation_delete</string>
    <string name="search">Buscar</string>
    <string name="name_login">Login</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="register_title">Registro</string>
    <string name="email_address">Correo electrónico</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="title_profile">Perfil</string>
    <string name="profile_">Perfil</string>
    <string name="description_notification">Lista de notificaciones que recibe el usuario al estar suscrito a alguna discoteca</string>
    <string name="description_favorite">Lista de perfiles de discoteca favoritos</string>
    <string name="description_search">Busqueda de las discotecas registradas en la base de datos</string>
    <string name="description_home">Pestaña principal de la app, se mostraran eventos próximos, recomendaciones (basadas en etiquetas seleccionadas por los usuarios)</string>
    <string name="discotheque">Discoteca</string>
    <string name="menu">Carta</string>
    <string name="event">Eventos</string>
    <string name="comments">Reseñas</string>
    <string name="receive_notification">Recibir notificaciones</string>
    <string name="info">Información</string>
    <string name="event_button">Eventos</string>
    <string name="carta_button">Carta</string>
    <string name="resena_button">Reseñas</string>
    <string name="rating">star_rating</string>
    <string name="name_disco">Discoteca</string>
    <string name="content">image</string>
    <string name="name_discoteca">Escriba el nombre de la discoteca</string>
    <string name="name_carta">coctel</string>
    <string name="name_disco_text">disco1</string>
    <string name="accept">Aceptar</string>
    <string name="Cancel">Cancelar</string>
    <string name="cover_">Cover</string>
    <string name="name_event">Nombre</string>
    <string name="date_event">Fecha</string>
    <string name="description">Descripción</string>
    <string name="hora_">Hora</string>
    <string name="address">Dirección</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>
    <string name="cost">Precio</string>

    <string name="string_login">Login</string>
    <string name="string_signUp">SignUp</string>
    <string name="create_product">create_product</string>
    <string name="string_product_name">Nombre del producto</string>
    <string name="string_product_price">Precio del producto</string>
    <string name="string_product_type">Tipo de producto</string>
    <string name="string_product_description">Descripción del producto</string>
    <string name="createproduct_title">Añadir un producto</string>
    <string name="string_createproduct_button">Crear producto</string>
    <string name="string_add">Añadir</string>
    <string name="string_loginButton">Iniciar sesión</string>
    <string name="string_titleCreateProduct">Crear producto</string>

    <string name="cancel">Cacelar</string>
    <string name="string_eventos">Eventos</string>
    <string name="string_createEvent">Crear evento</string>
    <string name="string_eventName">Nombre del evento</string>
    <string name="string_eventDescription">Descripción del evento</string>
    <string name="string_eventDate">Fecha:</string>
    <string name="string_eventdateformat">DD/MM/YYYY</string>
    <string name="string_eventTime">Hora:</string>
    <string name="string_timeFormat">HH/MM</string>
    <string name="string_eventCover">Cover</string>
    <string name="string_reviewTitle">Reseñas</string>
    <string name="string_reviewAuthor">Nombre del autor</string>
    <string name="string_puntosReview">Calificación</string>
    <string name="string_reviewDesc">Reseña</string>
    <string name="string_editEvent">Editar evento</string>
    <string name="String_edit">Editar</string>
    <string name="string_eventDelete">Eliminar</string>
    <string name="string_editProduct">Editar producto</string>
    <string name="string_discoName">Nombre de la discoteca</string>
    <string name="string_about">Acerca de nosotros</string>
    <string name="string_aboutContent">Descripción breve del sitio</string>
    <string name="string_contacto">Contactanos</string>
    <string name="string_num">Telefono:</string>
    <string name="string_email">E-mail:</string>
    <string name="string_address">Dirección:</string>
    <string name="String_ourProducts">Nuestros productos</string>
    <string name="string_nextEvents">Proximos eventos</string>
    <string name="string_editProfile">Editar perfil</string>
    <string name="string_save">Guardar</string>
    <string name="string_createReview">Deja una reseña</string>
    <string name="string_author">Autor</string>
    <string name="string_comment">Comentario</string>
    <string name="string_letReview">Calificar</string>
    <string name="title_disco_recomend">Mejores puntuadas</string>
    <string name="title_events">Eventos próximos</string>
</resources>