<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_discotecas">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.saturnaliausers.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.saturnaliausers.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.saturnaliausers.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_signUp"
        android:name="com.example.saturnaliausers.ui.signup.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_navigation_signUp_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.saturnaliausers.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_signUp"
            app:destination="@id/navigation_signUp" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_profile"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.saturnaliausers.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_carta"
        android:name="com.example.saturnaliausers.ui.carta.cartaFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_carta" />
    <fragment
        android:id="@+id/navigation_eventos"
        android:name="com.example.saturnaliausers.ui.eventos.eventosFragment"
        android:label="@string/event"
        tools:layout="@layout/fragment_eventos" />
    <fragment
        android:id="@+id/navigation_resena"
        android:name="com.example.saturnaliausers.ui.reseña.resenaFragment"
        android:label="@string/comments"
        tools:layout="@layout/fragment_resena" />
    <fragment
        android:id="@+id/navigation_discotecas"
        android:name="com.example.saturnaliausers.ui.discotecas.discotecasFragment"
        android:label="@string/discotheque"
        tools:layout="@layout/fragment_discotecas" >
        <action
            android:id="@+id/action_navigation_discotecas_to_navigation_carta"
            app:destination="@id/navigation_carta" />
        <action
            android:id="@+id/action_navigation_discotecas_to_navigation_eventos"
            app:destination="@id/navigation_eventos" />
        <action
            android:id="@+id/action_navigation_discotecas_to_navigation_resena"
            app:destination="@id/navigation_resena" />
    </fragment>
</navigation>